k8s/postgis.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgis
  template:
    metadata:
      labels:
        app: postgis
    spec:
      containers:
        - name: postgis
          image: postgis/postgis:17-3.5
          ports:
            - containerPort: 5432
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - -c
            - |
              if [ ! -f "/var/lib/postgresql/data/PG_VERSION" ]; then
                echo "Running initdb..."
                cd /var/lib/postgresql/data && rm postgresql.auto.conf postgresql.conf
                initdb -D /var/lib/postgresql/data
              fi
              echo "Starting PostgreSQL..."
              exec postgres -c config_file=/var/lib/postgresql/conf/postgresql.conf
          securityContext:
            runAsUser: 999
            runAsGroup: 999
          volumeMounts:
            - name: postgis-data
              mountPath: /var/lib/postgresql/data
            - name: postgis-conf
              mountPath: /var/lib/postgresql/conf/postgresql.conf
              subPath: postgresql.conf
            - name: postgis-conf
              mountPath: /var/lib/postgresql/conf/pg_hba.conf
              subPath: pg_hba.conf
      volumes:
        - name: postgis-data
          persistentVolumeClaim:
            claimName: postgis-pvc
        - name: postgis-conf
          configMap:
            name: postgis-config

---

apiVersion: v1
kind: Service
metadata:
  name: postgis
spec:
  selector:
    app: postgis
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
