k8s/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
            - name: actuator-password
              mountPath: /etc/prometheus/secrets
              readOnly: true
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
        - name: actuator-password
          secret:
            secretName: feedless-secrets
            items:
              - key: APP_ACTUATOR_PASSWORD
                path: actuator_password
